--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,300,400&display=swap"
       rel="stylesheet"
@@ -39,20 +39,26 @@
         </section>
       </section>
 
-      <!-- more info about builders -->
-      <section class="more-info">
-        <p>This is more info</p>
-      </section>
-
-      <!-- join us section -->
-      <section class="join-us">
-        <p>This is the join us section</p>
-      </section>
-
-      <!-- footer section -->
-      <footer>
-        <p>This is the footer section</p>
-      </footer>
+      <div id="footer">
+        <ul id="social-media-links"> 
+            <li>
+                <a href="https://www.facebook.com/profile.php?id=100094394285093" target="_blank">
+                    Facebook
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/saviodomiju/" target="_blank">
+                   Twitter
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/dominic-juma-018305279/" target="_blank">
+                   Linked 
+                </a>
+            </li>
+        </ul>
+        <span id="copyright" stylesheet="text-color: Red;">&copy; 2024, Builders. All rights reserved</span>
+    </div>
     </main>
   </body>
 </html>
