--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
       href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,300,400&display=swap"
       rel="stylesheet"
     />
+    <style>
+         #social-media-links {
+            display: flex;
+            justify-content: space-between;
+            max-width: 300px;
+            list-style: none;
+        }
+
+        #social-media-links li {
+            display: inline;
+            margin: 16px;
+            text-decoration: none;
+            width: 30px; 
+            height: 30px; 
+            margin-right: 10px; 
+        }
+
+        #social-media-links a img {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%; 
+            text-align: center;
+        }
+    </style>
+    
     <title>Keep Building</title>
   </head>
   <body>
@@ -43,22 +68,23 @@
         <ul id="social-media-links"> 
             <li>
                 <a href="https://www.facebook.com/profile.php?id=100094394285093" target="_blank">
-                    Facebook
+                    <img src="images/facebook.jpg"> 
                 </a>
             </li>
             <li>
                 <a href="https://twitter.com/saviodomiju/" target="_blank">
-                   Twitter
+                    <img src="images/twitter.jpg"> 
                 </a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/dominic-juma-018305279/" target="_blank">
-                   Linked 
+                    <img src="images/linkedin.jpg"> 
                 </a>
             </li>
         </ul>
-        <span id="copyright" stylesheet="text-color: Red;">&copy; 2024, Builders. All rights reserved</span>
-    </div>
+    </div>   
+    <span id="copyright"> &copy; 2024, Builders. All rights reserved</span>
+    
     </main>
   </body>
 </html>
